# TradeMaxer

./: .gitignore  CLAUDE.md  CMakeLists.txt  README.md  build.sh  main.cpp  math.py  run.sh
docs/ai/: API_Summary.md  Coding_Conventions.md  Configuration_Guide.md  Development_Log.md  Project_Architecture.md  Troubleshooting.md  User_Guide.md
src/: api.h  main.cpp  main_new.cpp  market_data_analyzer.py  math.py  stock_ranking_nn.py
src/common/: data_types.cpp  data_types.h
src/config/: config_manager.cpp  config_manager.h
src/database/: database_manager.cpp  database_manager.h
src/ipc/: ipc_manager.cpp  ipc_manager.h
src/logging/: logger.cpp  logger.h
src/trading/: trading_engine.cpp  trading_engine.h
